force-app/main/default/objects/Appeasement_Code__c/Appeasement_Code__c.object-meta.xml
<CustomObject>
    <label>Appeasement Code</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Appeasement Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeasement Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>