force-app/main/default/objects/Appeasement_Code__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Purpose_of_Appeasement__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checklist - 8 mth - Online</fullName>
            </value>
            <value>
                <fullName>Completion - 9 mth - Online</fullName>
            </value>
            <value>
                <fullName>Completion - 9 mth - Stores</fullName>
            </value>
            <value>
                <fullName>Congrats - 1 mth post - Online</fullName>
            </value>
            <value>
                <fullName>Congrats - 1 mth post - Stores</fullName>
            </value>
            <value>
                <fullName>Family And Friends - 7mth - Online</fullName>
            </value>
            <value>
                <fullName>Family And Friends - 7mth - Stores</fullName>
            </value>
            <value>
                <fullName>Feeding Infant - 2 mth post - Online</fullName>
            </value>
            <value>
                <fullName>Feeding Infant - 2 mth post - Stores</fullName>
            </value>
            <value>
                <fullName>Welcome - Online</fullName>
            </value>
            <value>
                <fullName>Welcome - Stores</fullName>
            </value>
            <value>
                <fullName>$10</fullName>
            </value>
            <value>
                <fullName>$15</fullName>
            </value>
            <value>
                <fullName>$20</fullName>
            </value>
            <value>
                <fullName>$25</fullName>
            </value>
            <value>
                <fullName>$30</fullName>
            </value>
            <value>
                <fullName>$35</fullName>
            </value>
            <value>
                <fullName>$40</fullName>
            </value>
            <value>
                <fullName>$45</fullName>
            </value>
            <value>
                <fullName>$50</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>$150</fullName>
            </value>
            <value>
                <fullName>$300</fullName>
            </value>
            <value>
                <fullName>$600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>