force-app/main/default/objects/Appeasement_Code__c/fields/Purpose_of_Appeasement__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Appeasement__c</fullName>
    <label>Purpose of Appeasement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Baby Registry</fullName>
            </value>
            <value>
                <fullName>Birthday - Stores</fullName>
                <isActive>false</isActive>
                <label>Birthday - Stores</label>
            </value>
            <value>
                <fullName>Bulk Order</fullName>
            </value>
            <value>
                <fullName>Checklist - 8 mth - Online</fullName>
                <isActive>false</isActive>
                <label>Checklist - 8 mth - Online</label>
            </value>
            <value>
                <fullName>Checklist - 8 mth - Stores</fullName>
                <isActive>false</isActive>
                <label>Checklist - 8 mth - Stores</label>
            </value>
            <value>
                <fullName>Completion - 9 mth - Online</fullName>
                <isActive>false</isActive>
                <label>Completion - 9 mth - Online</label>
            </value>
            <value>
                <fullName>Completion - 9 mth - Stores</fullName>
                <isActive>false</isActive>
                <label>Completion - 9 mth - Stores</label>
            </value>
            <value>
                <fullName>Congrats - 1 mth post - Online</fullName>
                <isActive>false</isActive>
                <label>Congrats - 1 mth post - Online</label>
            </value>
            <value>
                <fullName>Congrats - 1 mth post - Stores</fullName>
                <isActive>false</isActive>
                <label>Congrats - 1 mth post - Stores</label>
            </value>
            <value>
                <fullName>CS Appeasement</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>Family And Friends - 7mth - Online</fullName>
                <isActive>false</isActive>
                <label>Family And Friends - 7mth - Online</label>
            </value>
            <value>
                <fullName>Family And Friends - 7mth - Stores</fullName>
                <isActive>false</isActive>
                <label>Family And Friends - 7mth - Stores</label>
            </value>
            <value>
                <fullName>Feeding Infant - 2 mth post - Online</fullName>
                <isActive>false</isActive>
                <label>Feeding Infant - 2 mth post - Online</label>
            </value>
            <value>
                <fullName>Feeding Infant - 2 mth post - Stores</fullName>
                <isActive>false</isActive>
                <label>Feeding Infant - 2 mth post - Stores</label>
            </value>
            <value>
                <fullName>Misship</fullName>
            </value>
            <value>
                <fullName>Order Replacement</fullName>
            </value>
            <value>
                <fullName>RClub</fullName>
            </value>
            <value>
                <fullName>Registry completion - Online</fullName>
                <isActive>false</isActive>
                <label>Registry completion - Online</label>
            </value>
            <value>
                <fullName>Registry completion - Stores</fullName>
                <isActive>false</isActive>
                <label>Registry completion - Stores</label>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Shortship</fullName>
            </value>
            <value>
                <fullName>Welcome - Online</fullName>
                <isActive>false</isActive>
                <label>Welcome - Online</label>
            </value>
            <value>
                <fullName>Welcome - Stores</fullName>
                <isActive>false</isActive>
                <label>Welcome - Stores</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>