force-app/main/default/objects/Appeasement_Code__c/listViews/Damaged.listView-meta.xml
<ListView>
    <fullName>Damaged</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Purpose_of_Appeasement__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Purpose_of_Appeasement__c</field>
        <operation>equals</operation>
        <value>Damaged</value>
    </filters>
    <label>Damaged</label>
</ListView>