force-app/main/default/objects/Appeasement_Code__c/listViews/Temp.listView-meta.xml
<ListView>
    <fullName>Temp</fullName>
    <columns>NAME</columns>
    <columns>Purpose_of_Appeasement__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Temp</label>
</ListView>